src/ai/harmony/ravel/antlr/RavelLangMParser.java
// Generated from /Users/lauril/workspace/01-ravel/RavelLang/RavelLangM.g4 by ANTLR 4.5.3
package ai.harmony.ravel.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class RavelLangMParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, ID=16, INT=17, 
		NL=18, WS=19;
	public static final int
		RULE_file_input = 0, RULE_modelDecl = 1, RULE_name = 2, RULE_modelType = 3, 
		RULE_modelBody = 4, RULE_propDecl = 5, RULE_property = 6, RULE_schemaBody = 7, 
		RULE_schemaDecl = 8, RULE_field_name = 9, RULE_field_type = 10, RULE_field = 11, 
		RULE_field_opt = 12, RULE_spaceDecl = 13, RULE_spaceBody = 14, RULE_spaceConf = 15, 
		RULE_spaceModel = 16, RULE_pair = 17, RULE_end = 18;
	public static final String[] ruleNames = {
		"file_input", "modelDecl", "name", "modelType", "modelBody", "propDecl", 
		"property", "schemaBody", "schemaDecl", "field_name", "field_type", "field", 
		"field_opt", "spaceDecl", "spaceBody", "spaceConf", "spaceModel", "pair", 
		"end"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'model'", "':'", "'local'", "'streaming'", "'replicated'", "'properties:'", 
		"' = '", "'schema:'", "'('", "')'", "','", "'space'", "'configuration:'", 
		"'models:'", "'END'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, "ID", "INT", "NL", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "RavelLangM.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public RavelLangMParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class File_inputContext extends ParserRuleContext {
		public List<ModelDeclContext> modelDecl() {
			return getRuleContexts(ModelDeclContext.class);
		}
		public ModelDeclContext modelDecl(int i) {
			return getRuleContext(ModelDeclContext.class,i);
		}
		public List<SpaceDeclContext> spaceDecl() {
			return getRuleContexts(SpaceDeclContext.class);
		}
		public SpaceDeclContext spaceDecl(int i) {
			return getRuleContext(SpaceDeclContext.class,i);
		}
		public File_inputContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file_input; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RavelLangMVisitor ) return ((RavelLangMVisitor<? extends T>)visitor).visitFile_input(this);
			else return visitor.visitChildren(this);
		}
	}

	public final File_inputContext file_input() throws RecognitionException {
		File_inputContext _localctx = new File_inputContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_file_input);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(40);
				switch (_input.LA(1)) {
				case T__2:
				case T__3:
				case T__4:
					{
					setState(38);
					modelDecl();
					}
					break;
				case T__11:
					{
					setState(39);
					spaceDecl();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(42); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__11))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModelDeclContext extends ParserRuleContext {
		public ModelDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_modelDecl; }
	 
		public ModelDeclContext() { }
		public void copyFrom(ModelDeclContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ModelDeclarationContext extends ModelDeclContext {
		public ModelTypeContext modelType() {
			return getRuleContext(ModelTypeContext.class,0);
		}
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public ModelBodyContext modelBody() {
			return getRuleContext(ModelBodyContext.class,0);
		}
		public EndContext end() {
			return getRuleContext(EndContext.class,0);
		}
		public List<TerminalNode> NL() { return getTokens(RavelLangMParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(RavelLangMParser.NL, i);
		}
		public ModelDeclarationContext(ModelDeclContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RavelLangMVisitor ) return ((RavelLangMVisitor<? extends T>)visitor).visitModelDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModelDeclContext modelDecl() throws RecognitionException {
		ModelDeclContext _localctx = new ModelDeclContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_modelDecl);
		int _la;
		try {
			_localctx = new ModelDeclarationContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			modelType();
			setState(45);
			match(T__0);
			setState(46);
			name();
			setState(47);
			match(T__1);
			setState(51);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NL) {
				{
				{
				setState(48);
				match(NL);
				}
				}
				setState(53);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(54);
			modelBody();
			setState(58);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NL) {
				{
				{
				setState(55);
				match(NL);
				}
				}
				setState(60);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(61);
			end();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NameContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(RavelLangMParser.ID, 0); }
		public NameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_name; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RavelLangMVisitor ) return ((RavelLangMVisitor<? extends T>)visitor).visitName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NameContext name() throws RecognitionException {
		NameContext _localctx = new NameContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModelTypeContext extends ParserRuleContext {
		public ModelTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_modelType; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RavelLangMVisitor ) return ((RavelLangMVisitor<? extends T>)visitor).visitModelType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModelTypeContext modelType() throws RecognitionException {
		ModelTypeContext _localctx = new ModelTypeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_modelType);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << T__3) | (1L << T__4))) != 0)) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModelBodyContext extends ParserRuleContext {
		public PropDeclContext propDecl() {
			return getRuleContext(PropDeclContext.class,0);
		}
		public SchemaDeclContext schemaDecl() {
			return getRuleContext(SchemaDeclContext.class,0);
		}
		public List<TerminalNode> NL() { return getTokens(RavelLangMParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(RavelLangMParser.NL, i);
		}
		public ModelBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_modelBody; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RavelLangMVisitor ) return ((RavelLangMVisitor<? extends T>)visitor).visitModelBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModelBodyContext modelBody() throws RecognitionException {
		ModelBodyContext _localctx = new ModelBodyContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_modelBody);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			propDecl();
			setState(71);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NL) {
				{
				{
				setState(68);
				match(NL);
				}
				}
				setState(73);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(74);
			schemaDecl();
			setState(78);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(75);
					match(NL);
					}
					} 
				}
				setState(80);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PropDeclContext extends ParserRuleContext {
		public PropDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_propDecl; }
	 
		public PropDeclContext() { }
		public void copyFrom(PropDeclContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ModelPropertiesContext extends PropDeclContext {
		public TerminalNode NL() { return getToken(RavelLangMParser.NL, 0); }
		public EndContext end() {
			return getRuleContext(EndContext.class,0);
		}
		public List<PropertyContext> property() {
			return getRuleContexts(PropertyContext.class);
		}
		public PropertyContext property(int i) {
			return getRuleContext(PropertyContext.class,i);
		}
		public ModelPropertiesContext(PropDeclContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RavelLangMVisitor ) return ((RavelLangMVisitor<? extends T>)visitor).visitModelProperties(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PropDeclContext propDecl() throws RecognitionException {
		PropDeclContext _localctx = new PropDeclContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_propDecl);
		int _la;
		try {
			_localctx = new ModelPropertiesContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			match(T__5);
			setState(82);
			match(NL);
			setState(84); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(83);
				property();
				}
				}
				setState(86); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ID );
			setState(88);
			end();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PropertyContext extends ParserRuleContext {
		public PropertyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_property; }
	 
		public PropertyContext() { }
		public void copyFrom(PropertyContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class PropertyDeclContext extends PropertyContext {
		public List<TerminalNode> ID() { return getTokens(RavelLangMParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(RavelLangMParser.ID, i);
		}
		public TerminalNode INT() { return getToken(RavelLangMParser.INT, 0); }
		public List<TerminalNode> NL() { return getTokens(RavelLangMParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(RavelLangMParser.NL, i);
		}
		public PropertyDeclContext(PropertyContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RavelLangMVisitor ) return ((RavelLangMVisitor<? extends T>)visitor).visitPropertyDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PropertyContext property() throws RecognitionException {
		PropertyContext _localctx = new PropertyContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_property);
		int _la;
		try {
			_localctx = new PropertyDeclContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			match(ID);
			setState(91);
			match(T__6);
			setState(92);
			_la = _input.LA(1);
			if ( !(_la==ID || _la==INT) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			setState(96);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NL) {
				{
				{
				setState(93);
				match(NL);
				}
				}
				setState(98);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SchemaBodyContext extends ParserRuleContext {
		public List<FieldContext> field() {
			return getRuleContexts(FieldContext.class);
		}
		public FieldContext field(int i) {
			return getRuleContext(FieldContext.class,i);
		}
		public List<TerminalNode> NL() { return getTokens(RavelLangMParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(RavelLangMParser.NL, i);
		}
		public SchemaBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_schemaBody; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RavelLangMVisitor ) return ((RavelLangMVisitor<? extends T>)visitor).visitSchemaBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SchemaBodyContext schemaBody() throws RecognitionException {
		SchemaBodyContext _localctx = new SchemaBodyContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_schemaBody);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(106); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(99);
					field();
					setState(103);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
					while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
						if ( _alt==1 ) {
							{
							{
							setState(100);
							match(NL);
							}
							} 
						}
						setState(105);
						_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
					}
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(108); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SchemaDeclContext extends ParserRuleContext {
		public SchemaDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_schemaDecl; }
	 
		public SchemaDeclContext() { }
		public void copyFrom(SchemaDeclContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ModelSchemaContext extends SchemaDeclContext {
		public List<TerminalNode> NL() { return getTokens(RavelLangMParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(RavelLangMParser.NL, i);
		}
		public EndContext end() {
			return getRuleContext(EndContext.class,0);
		}
		public List<SchemaBodyContext> schemaBody() {
			return getRuleContexts(SchemaBodyContext.class);
		}
		public SchemaBodyContext schemaBody(int i) {
			return getRuleContext(SchemaBodyContext.class,i);
		}
		public ModelSchemaContext(SchemaDeclContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RavelLangMVisitor ) return ((RavelLangMVisitor<? extends T>)visitor).visitModelSchema(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SchemaDeclContext schemaDecl() throws RecognitionException {
		SchemaDeclContext _localctx = new SchemaDeclContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_schemaDecl);
		int _la;
		try {
			_localctx = new ModelSchemaContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(T__7);
			setState(114);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NL) {
				{
				{
				setState(111);
				match(NL);
				}
				}
				setState(116);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(118); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(117);
				schemaBody();
				}
				}
				setState(120); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ID );
			setState(122);
			match(NL);
			setState(123);
			end();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Field_nameContext extends ParserRuleContext {
		public Field_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_field_name; }
	 
		public Field_nameContext() { }
		public void copyFrom(Field_nameContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class FieldNameContext extends Field_nameContext {
		public TerminalNode ID() { return getToken(RavelLangMParser.ID, 0); }
		public FieldNameContext(Field_nameContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RavelLangMVisitor ) return ((RavelLangMVisitor<? extends T>)visitor).visitFieldName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Field_nameContext field_name() throws RecognitionException {
		Field_nameContext _localctx = new Field_nameContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_field_name);
		try {
			_localctx = new FieldNameContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Field_typeContext extends ParserRuleContext {
		public Field_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_field_type; }
	 
		public Field_typeContext() { }
		public void copyFrom(Field_typeContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class FieldTypeContext extends Field_typeContext {
		public TerminalNode ID() { return getToken(RavelLangMParser.ID, 0); }
		public FieldTypeContext(Field_typeContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RavelLangMVisitor ) return ((RavelLangMVisitor<? extends T>)visitor).visitFieldType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Field_typeContext field_type() throws RecognitionException {
		Field_typeContext _localctx = new Field_typeContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_field_type);
		try {
			_localctx = new FieldTypeContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldContext extends ParserRuleContext {
		public Field_nameContext field_name() {
			return getRuleContext(Field_nameContext.class,0);
		}
		public Field_typeContext field_type() {
			return getRuleContext(Field_typeContext.class,0);
		}
		public Field_optContext field_opt() {
			return getRuleContext(Field_optContext.class,0);
		}
		public List<TerminalNode> NL() { return getTokens(RavelLangMParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(RavelLangMParser.NL, i);
		}
		public FieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_field; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RavelLangMVisitor ) return ((RavelLangMVisitor<? extends T>)visitor).visitField(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FieldContext field() throws RecognitionException {
		FieldContext _localctx = new FieldContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_field);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			field_name();
			setState(130);
			match(T__6);
			setState(131);
			field_type();
			setState(132);
			match(T__8);
			setState(134);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(133);
				field_opt();
				}
			}

			setState(136);
			match(T__9);
			setState(140);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(137);
					match(NL);
					}
					} 
				}
				setState(142);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Field_optContext extends ParserRuleContext {
		public Field_optContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_field_opt; }
	 
		public Field_optContext() { }
		public void copyFrom(Field_optContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class FieldOptContext extends Field_optContext {
		public List<PairContext> pair() {
			return getRuleContexts(PairContext.class);
		}
		public PairContext pair(int i) {
			return getRuleContext(PairContext.class,i);
		}
		public FieldOptContext(Field_optContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RavelLangMVisitor ) return ((RavelLangMVisitor<? extends T>)visitor).visitFieldOpt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Field_optContext field_opt() throws RecognitionException {
		Field_optContext _localctx = new Field_optContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_field_opt);
		int _la;
		try {
			_localctx = new FieldOptContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			pair();
			setState(148);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__10) {
				{
				{
				setState(144);
				match(T__10);
				setState(145);
				pair();
				}
				}
				setState(150);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SpaceDeclContext extends ParserRuleContext {
		public SpaceDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_spaceDecl; }
	 
		public SpaceDeclContext() { }
		public void copyFrom(SpaceDeclContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class SpaceDeclarationContext extends SpaceDeclContext {
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public SpaceBodyContext spaceBody() {
			return getRuleContext(SpaceBodyContext.class,0);
		}
		public EndContext end() {
			return getRuleContext(EndContext.class,0);
		}
		public List<TerminalNode> NL() { return getTokens(RavelLangMParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(RavelLangMParser.NL, i);
		}
		public SpaceDeclarationContext(SpaceDeclContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RavelLangMVisitor ) return ((RavelLangMVisitor<? extends T>)visitor).visitSpaceDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SpaceDeclContext spaceDecl() throws RecognitionException {
		SpaceDeclContext _localctx = new SpaceDeclContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_spaceDecl);
		int _la;
		try {
			_localctx = new SpaceDeclarationContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(151);
			match(T__11);
			setState(152);
			name();
			setState(153);
			match(T__1);
			setState(157);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NL) {
				{
				{
				setState(154);
				match(NL);
				}
				}
				setState(159);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(160);
			spaceBody();
			setState(164);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NL) {
				{
				{
				setState(161);
				match(NL);
				}
				}
				setState(166);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(167);
			end();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SpaceBodyContext extends ParserRuleContext {
		public PropDeclContext propDecl() {
			return getRuleContext(PropDeclContext.class,0);
		}
		public SpaceConfContext spaceConf() {
			return getRuleContext(SpaceConfContext.class,0);
		}
		public SpaceModelContext spaceModel() {
			return getRuleContext(SpaceModelContext.class,0);
		}
		public List<TerminalNode> NL() { return getTokens(RavelLangMParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(RavelLangMParser.NL, i);
		}
		public SpaceBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_spaceBody; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RavelLangMVisitor ) return ((RavelLangMVisitor<? extends T>)visitor).visitSpaceBody(this);
			else return visitor.visitChildren(this);
		}
	}
